--- a/index.html
+++ b/index.html
@@ -477,31 +477,31 @@
         <p>PODIUM PE</p>
         <p>PODIUM PE</p>
         <p>PODIUM PE</p>
-        <p>PODIUM PE</p>
-        <p>PODIUM PE</p>
       </div>
       <img class="phone-img-mobile" src="/assets/images/mobile/mobile.png" alt="mobile">
       <div class="phone-strip-mobile">
         <div class="phone-small-strip-mobile">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun</p>
+          <p><marquee width="80%">Rev up your engines and fuel your imagination – Fantasy Motorsport is where the track meets your strategy, and the podium beckons your triumph.
+          </marquee></p>
         </div>
         <div class="phone-middle-strip">
-          <p>
-            <marquee>COMING SOON</marquee></p>
+          <p><marquee width="60%">COMING SOON</marquee></p>
+          <h5 class="strip-slash1">/</h5>
         </div>
         <div class="phone-small-strip-mobile">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun</p>
+          <p><marquee width="80%">Don't just watch the races, be a part of them – join us in the world of Fantasy Motorsport and let the engines roar and strategies unfold!</marquee></p>
         </div>
       </div>
       <div class="phone-strip-mobile-2">
         <div class="phone-small-strip-mobile">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun</p>
+          <p><marquee width="80%">Stay updated with real-time race statistics and driver insights, allowing you to fine-tune your team throughout the season and adapt to the dynamic nature of motorsport.</marquee></p>
         </div>
         <div class="phone-middle-strip">
-          <p><marquee>COMING SOON</marquee></p>
+          <p><marquee width="60%">COMING SOON</marquee></p>
+          <h5 class="strip-slash2">/</h5>
         </div>
         <div class="phone-small-strip-mobile">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun</p>
+          <p><marquee width="80%">Craft your dream team from a lineup of legendary drivers, each with their unique strengths and skills, adding an element of excitement to every race weekend.</marquee></p>
         </div>
       </div>
     </div>
