--- a/how-to-play.html
+++ b/how-to-play.html
@@ -42,7 +42,6 @@
             <span class="menu-bar"></span>
         </div>
     </header>
-  <hr id="header-hr" />
 
     <div class="top-X">
         <h1>X</h1>
@@ -74,6 +73,9 @@
         </div>
     </div>
     <div class="details">
+        <div class="bg-img">
+            <img src="./assets/images/Group 9213(1).png" alt="">
+        </div>
         <div class="title">
             <h1>CHOOSE</h1>
             <p>the right game</p>
@@ -95,7 +97,7 @@
     </div>
 
     <div class="details">
-        <div class="title">
+        <div class="title m-t2">
             <h1>PICK</h1>
             <p>the best options.</p>
         </div>
@@ -116,7 +118,7 @@
     </div>
 
     <div class="details">
-        <div class="title">
+        <div class="title m-t3">
             <h1>TRACK</h1>
             <p>your progress.</p>
         </div>
@@ -169,6 +171,40 @@
                     MORE</h1>
                 <img src="./assets/images/right-most-p.png" alt="">
             </div>
+        </div>
+
+        <div class="pics-m">
+            <div class="m-1">
+                <img src="./assets/images/p-1.png" alt="">
+                <div class="m-txt">
+                    <h1>RACES YOU DON'T WANT TO MISS OUT ON.</h1>
+                    <p>Get all the information you need to make the right decisions.</p>
+                </div>
+            </div>
+            <div class="m-2">
+                <h1>PLAY MORE
+                    WIN
+                    MORE</h1>
+                <div class="m2-txt">
+                    <p>The more you play, the more likely you are to win.</p>
+                    <img src="./assets/images/p-2.png" alt="">
+                </div>
+            </div>
+            <div class="m-3">
+                <h1>BIG PRIZES</h1>
+                <div class="m3-txt">
+                    <img src="./assets/images/p-3.png" alt="">
+                    <p>Organized ranking systems to secure your position</p>
+                </div>
+            </div>
+            <div class="m-4">
+                <p>Stay updated with races through the game.</p>
+                <div class="m4-txt">
+                    <h1>STAY UPDATED</h1>
+                    <img src="./assets/images/p-4.png" alt="">
+                </div>
+            </div>
+            
         </div>
     </div>
 
