--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
           </marquee></p>
         </div>
         <div class="phone-middle-strip">
-          <p><marquee width="60%">COMING SOON</marquee></p>
+          <p><marquee width="60%" >COMING SOON  COMING SOON  COMING SOON COMING SOON  COMING SOON  COMING SOON  COMING SOON  COMING SOON COMING SOON</marquee></p>
           <h5 class="strip-slash1">/</h5>
         </div>
         <div class="phone-small-strip-mobile">
@@ -494,10 +494,10 @@
       </div>
       <div class="phone-strip-mobile-2">
         <div class="phone-small-strip-mobile">
-          <p><marquee width="80%">Stay updated with real-time race statistics and driver insights, allowing you to fine-tune your team throughout the season and adapt to the dynamic nature of motorsport.</marquee></p>
+          <p><marquee width="80%" >Stay updated with real-time race statistics and driver insights, allowing you to fine-tune your team throughout the season and adapt to the dynamic nature of motorsport.</marquee></p>
         </div>
         <div class="phone-middle-strip">
-          <p><marquee width="60%">COMING SOON</marquee></p>
+          <p><marquee width="60%" >COMING SOON COMING SOON COMING SOON COMING SOON COMING SOON COMING SOON COMING SOON COMING SOON</marquee></p>
           <h5 class="strip-slash2">/</h5>
         </div>
         <div class="phone-small-strip-mobile">
