mobile view(400px)

--- a/how-to-play.html
+++ b/how-to-play.html
@@ -74,6 +74,11 @@
     </div>
     <div class="details">
         <div class="bg-img">
+            <div class="bg-text">
+                <h1>SUZUKA</h1>
+                <h3>JAPAN</h3>
+                <h1>CIRCUIT</h1>
+            </div>
             <img src="./assets/images/Group 9213(1).png" alt="">
         </div>
         <div class="title">
@@ -202,6 +207,16 @@
                 <div class="m4-txt">
                     <h1>STAY UPDATED</h1>
                     <img src="./assets/images/p-4.png" alt="">
+                </div>
+            </div>
+            <div class="m-5">
+                <h1>WIN BIG</h1>
+                <div class="m5-txt">
+                    <img src="./assets/images/p-5.png" alt="">
+                    <div>
+                        <h1>DRAW <br>MORE</h1>
+                        <p>Secure payments & withdrawals</p>
+                    </div>
                 </div>
             </div>
             
