mobile view responsive.

--- a/how-to-play.html
+++ b/how-to-play.html
@@ -182,7 +182,7 @@
             <div class="m-1">
                 <img src="./assets/images/p-1.png" alt="">
                 <div class="m-txt">
-                    <h1>RACES YOU DON'T WANT TO MISS OUT ON.</h1>
+                    <h1>RACES <br> YOU <br> DON'T WANT TO MISS OUT ON.</h1>
                     <p>Get all the information you need to make the right decisions.</p>
                 </div>
             </div>
