fix strip and fix footer

--- a/index.html
+++ b/index.html
@@ -485,7 +485,21 @@
           </marquee></p>
         </div>
         <div class="phone-middle-strip">
-          <p><marquee width="60%" >COMING SOON  COMING SOON  COMING SOON COMING SOON  COMING SOON  COMING SOON  COMING SOON  COMING SOON COMING SOON</marquee></p>
+          <!-- <p><marquee width="60%"  vspace="20" >COMING SOON  COMING SOON  COMING SOON COMING SOON  COMING SOON  COMING SOON  COMING SOON  COMING SOON COMING SOON</marquee></p> -->
+            <marquee scrollamount="15">
+            <div class="cm-text-mobile">
+              <p class="cm-p-mobile">COMING SOON</p>
+              <p class="cm-p-mobile">COMING SOON</p>
+              <p class="cm-p-mobile">COMING SOON</p>
+              <p class="cm-p-mobile">COMING SOON</p>
+              <p class="cm-p-mobile">COMING SOON</p>
+              <p class="cm-p-mobile">COMING SOON</p>
+              <p class="cm-p-mobile">COMING SOON</p>
+              <p class="cm-p-mobile">COMING SOON</p>
+              <p class="cm-p-mobile">COMING SOON</p>
+              <p class="cm-p-mobile">COMING SOON</p>
+            </div>
+            </marquee>
           <h5 class="strip-slash1">/</h5>
         </div>
         <div class="phone-small-strip-mobile">
@@ -497,7 +511,20 @@
           <p><marquee width="80%" >Stay updated with real-time race statistics and driver insights, allowing you to fine-tune your team throughout the season and adapt to the dynamic nature of motorsport.</marquee></p>
         </div>
         <div class="phone-middle-strip">
-          <p><marquee width="60%" >COMING SOON COMING SOON COMING SOON COMING SOON COMING SOON COMING SOON COMING SOON COMING SOON</marquee></p>
+          <marquee scrollamount="15">
+          <div class="cm-text-mobile">
+            <p class="cm-p-mobile">COMING SOON</p>
+            <p class="cm-p-mobile">COMING SOON</p>
+            <p class="cm-p-mobile">COMING SOON</p>
+            <p class="cm-p-mobile">COMING SOON</p>
+            <p class="cm-p-mobile">COMING SOON</p>
+            <p class="cm-p-mobile">COMING SOON</p>
+            <p class="cm-p-mobile">COMING SOON</p>
+            <p class="cm-p-mobile">COMING SOON</p>
+            <p class="cm-p-mobile">COMING SOON</p>
+            <p class="cm-p-mobile">COMING SOON</p>
+          </div>
+          </marquee>
           <h5 class="strip-slash2">/</h5>
         </div>
         <div class="phone-small-strip-mobile">
@@ -567,15 +594,21 @@
     </div>
     <div id="footer-content-m">
       <div class="foot-link-div">
-        <a href="TermsAndService.html" class="footer-link">Terms & Conditions</a>
-        <a href="PrivacyPolicy.html" class="footer-link center-align">Privacy Policy</a>
-        <a href="help-support.html" class="footer-link right-align">Help & Support</a>
+        <a href="TermsAndService.html" class="footer-link">Terms & Conditions
+          <div class="line line-fm-1"></div>
+        </a>
+        <a href="PrivacyPolicy.html" class="footer-link center-align">Privacy Policy
+          <div class="line line-fm-2"></div>
+        </a>
+        <a href="help-support.html" class="footer-link right-align">Help & Support
+          <div class="line line-fm-3"></div>
+        </a>
       </div>
-      <div class="li-underln">
+      <!-- <div class="li-underln">
         <div class="line l-div"></div>
         <div class="line"></div>
         <div class="line r-div"></div>
-      </div>
+      </div> -->
       <div id="footer-subcard">
         <div id="footer-subcard-logo">
           <img src="./assets/images/blogo.svg" />
