--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="fant-div">
             <img
               id="download-card-img"
-              src="./assets/images/Mask group (1).png"
+              src="./assets/images/hero-section-group.png"
               alt=""
             />
           </div>
