added changes to the code

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="res-line"></div>
           <ul id="nav-menu">
             <a class="navbar-active res-link"  href="./index.html">
-              <img class="navbar-polygon" src="/assets/images/Polygon .png" alt="polygon">
+              <img class="navbar-polygon" src="./assets/images/Polygon .png" alt="polygon">
               <li class="li-active">Home</li>
             </a>
             <a href="./about.html">
@@ -478,7 +478,7 @@
         <p>PODIUM PE</p>
         <p>PODIUM PE</p>
       </div>
-      <img class="phone-img-mobile" src="/assets/images/mobile/mobile.png" alt="mobile">
+      <img class="phone-img-mobile" src="./assets/images/mobile/mobile.png" alt="mobile">
       <div class="phone-strip-mobile">
         <div class="phone-small-strip-mobile">
           <p>Rev up your engines and fuel your imagination – Fantasy Motorsport is where the track meets your strategy, and the podium beckons your triumph.
