made navbar fixed

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
             <a class="navbar-active" href="./about.html">
               <img
                 class="navbar-polygon"
-                src="/assets/images/Polygon .png"
+                src="./assets/images/Polygon .png"
                 alt="polygon"
               />
               <li class="li-active">About</li>
@@ -169,7 +169,7 @@
         </div>
         <div class="car-desktop-section">
           <!-- car img -->
-          <img class="hero-car" src="/assets/images/carhero.png" alt="car" />
+          <img class="hero-car" src="./assets/images/carhero.png" alt="car" />
           <!--car front text -->
           <div class="car-front-text">
             <div class="carf-row1">
@@ -210,7 +210,7 @@
                 <p class="core-value-2">2</p>
                 <img
                   class="trophy2"
-                  src="/assets/images/trophy2.png"
+                  src="./assets/images/trophy2.png"
                   alt="trophy2"
                 />
               </div>
@@ -231,7 +231,7 @@
                 <p class="core-value-1">1</p>
                 <img
                   class="trophy1"
-                  src="/assets/images/trophy1.png"
+                  src="./assets/images/trophy1.png"
                   alt="trophy1"
                 />
               </div>
@@ -256,7 +256,7 @@
                 <p class="core-value-3">3</p>
                 <img
                   class="trophy3"
-                  src="/assets/images/trophy3.png"
+                  src="./assets/images/trophy3.png"
                   alt="trophy1"
                 />
               </div>
@@ -346,9 +346,9 @@
       </div>
       <!-- right three lines -->
       <div class="right-lines">
-        <img class="aboutline-1" src="/assets/images/1line.png" alt="1line" />
-        <img class="aboutline-2" src="/assets/images/2line.png" alt="2line" />
-        <img class="aboutline-3" src="/assets/images/3line.png" alt="3line" />
+        <img class="aboutline-1" src="./assets/images/1line.png" alt="1line" />
+        <img class="aboutline-2" src="./assets/images/2line.png" alt="2line" />
+        <img class="aboutline-3" src="./assets/images/3line.png" alt="3line" />
       </div>
       <!-- reach us out -->
       <div class="about-contact">
@@ -358,24 +358,24 @@
           <!-- 1200 px image arrow -->
           <img
             class="about-arrow-1200"
-            src="/assets/images/arrowRed1200.png"
+            src="./assets/images/arrowRed1200.png"
             alt="arrowRight"
           />
         </div>
         <div class="about-contact-details">
           <div class="ac-details-1">
             <div class="acd-1">
-              <img src="/assets/images/@.png" alt="email" />
+              <img src="./assets/images/@.png" alt="email" />
               <p>hi@podiumpe.com</p>
             </div>
             <div class="acd-2">
-              <img src="/assets/images/contact.png" alt="contact" />
+              <img src="./assets/images/contact.png" alt="contact" />
               <p>+91-0755-4055530</p>
             </div>
           </div>
           <div class="ac-details-2">
             <div class="acd-3">
-              <img src="/assets/images/location.png" alt="location" />
+              <img src="./assets/images/location.png" alt="location" />
               <p>Address: HIG-419, E-7, Arera Colony, Bhopal, MP</p>
             </div>
             <div class="acd-4">
