font & dimenssions changed.

--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -16,7 +16,10 @@
 <body>
   <header class="header">
     <img id="logo" src="./assets/images/logo2.svg" alt="logo" loading="lazy" />
-    <h4 class="pp-shift">PodiumPe</h4>
+    <!-- <h4 class="pp-shift">PodiumPe</h4> -->
+    <h4 class="pp-shift">
+      <a class="n-link" href="/index.html">PodiumPe</a>
+    </h4>
     <nav>
       <svg class="close" xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 27 27" fill="none">
         <path d="M2 24.6274L24.6274 2.00002" stroke="white" stroke-width="4" />
