made xplore better

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </div>
           </div>
           <div id="btn-row">
-            <button id="learn-more">learn more</button>
+            <a href="how-to-play.html" class="learn-more-a"><button id="learn-more">learn more</button></a>
           </div>
         </div>
       </div>
@@ -330,7 +330,10 @@
     </section>
 
     <div class="strip">
-      <img src="./assets/images/strip.png" class="strip-img" />
+      <img src="./assets/images/ExploreImage.png" class="strip-img" />
+      <h4 class="explore-cut-50-top">EXPLORE</h4>
+      <!-- <div  class="explore-cut-50-bottom-div"><h4 class="explore-cut-50-bottom-exp">EXPLORE</h4></div> -->
+      <h4 class="explore-cut-50-bottom">EXPLORE</h4>
       <h2 class="strip-text">EXPLORE OUR GAMES</h2>
       <img src="./assets/images/mobile/strip.svg" class="strip-img-m" />
       <h2 class="strip-text-m">EXPLORE OUR GAMES</h2>
