--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             wins - once you're confident, place your bet.
           </div>
         </div>
-        <button id="num-card-more-btn">learn more</button>
+        <a href="./how-to-play.html" class="learn-more-mobile"><button id="num-card-more-btn">learn more</button></a>
       </div>
     </section>
 
