added coming soon text.

--- a/how-to-play.html
+++ b/how-to-play.html
@@ -307,7 +307,7 @@
         <div class="r-man">
             <img class="img1" src="./assets/images/racing-man.png" alt="">
             <img class="rect1" src="./assets/images/Rectangle 40756.png" alt="">
-            <h1><i>COMING SOON!</i></h1>
+            <h1><i>COMING <span>SOON!</span></i></h1>
         </div>
         <div class="right-rect">
             <img class="rect4" src="./assets/images/Rectangle 40756.png" alt="">
