coming-soon text.

--- a/how-to-play.html
+++ b/how-to-play.html
@@ -115,6 +115,8 @@
           <span class="menu-bar"></span>
         </div>
       </header>
+  <hr id="header-hr" />
+
     <div class="top-X">
         <h1>X</h1>
         <h1 class="r-shift">X</h1>
@@ -307,7 +309,8 @@
         <div class="r-man">
             <img class="img1" src="./assets/images/racing-man.png" alt="">
             <img class="rect1" src="./assets/images/Rectangle 40756.png" alt="">
-            <h1><i>COMING <span>SOON!</span></i></h1>
+            <h1><i>COMING SOON!</i></h1>
+            <p><i>COMING <br>SOON!</i></p>
         </div>
         <div class="right-rect">
             <img class="rect4" src="./assets/images/Rectangle 40756.png" alt="">
