--- a/how-to-play.html
+++ b/how-to-play.html
@@ -240,8 +240,11 @@
             </div>
             <div class="right">
                 <p>Stay updated with races through the game.</p>
-                <h1>STAY UPDATED</h1>
+                <div>
+                  <h1>STAY UPDATED</h1>
                 <img src="./assets/images/right-p.png" alt="">
+                </div>
+                
             </div>
             <div class="right-most">
                 <p>The more you play, the more likely you are to win.</p>
