error page mobile.

--- a/index.html
+++ b/index.html
@@ -550,7 +550,10 @@
         </p>
         <div id="download-options-wrapper">
           <img class="download-options" src="./assets/images/app-store.png" alt="play-store" loading="lazy" />
-          <img class="download-options" src="./assets/images/play-store.png" alt="play-store" loading="lazy" />
+          <div class="dow-arrow"">
+            <img class="download-options" src="./assets/images/play-store.png" alt="play-store" loading="lazy" />
+            <p>>>>>>>>>>>>>></p>
+          </div>
         </div>
       </div>
     </section>
