updated return and refund policy

--- a/TermsAndService.html
+++ b/TermsAndService.html
@@ -439,7 +439,7 @@
         <p>
           If You have any concern or dispute about the Service, You agree to
           first try to resolve the dispute informally by contacting the
-          Company.
+          Company. Before the game starts, User has option to ask for a refund and is allowed for 100% refund.But once, the game has started the user is not allowed for any refunds or returns unless there is a technical glitch.
         </p>
       </div>
       <div class="clause-wrapper" id="08">
