added changes to the code

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
                   <img src="./assets/images/Group 9039.png" />
                 </div>
                 <div class="text-card pd-1 card-3">
-                  <p class="card-title card-title-3">Place Your Bet and Win.</p>
+                  <p class="card-title card-title-3">Enter the Competition and Win.</p>
                   <p class="text text-3">
                     Analyse statistics, assess our scoring criteria and
-                    predict your wins - once you're confident, place your bet.
+                    predict your wins - once you're confident, enter the competition.
                   </p>
                 </div>
               </div>
@@ -247,25 +247,6 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="port">
-          <div class="port-x">
-            <h1 class="port-x-first">X</h1>
-            <h1 class="port-x-second">X</h1>
-          </div>
-          <div class="port-text">
-            <h1>X</h1>
-            <h2>WHAT'S ON THE APP?</h2>
-            <h1>X</h1>
-          </div>
-          <div class="port-end">
-            <h1 class="port-end-first">X</h1>
-            <h1 class="port-end-second">X</h1>
-          </div>
-        </div> -->
-      <!-- <img src="./assets/images/xpic1.svg" /> -->
-
-      <!-- <img src="./assets/images/whats-it.svg" id="whats-it" /> -->
       <div id="porfolio-content-wrapper-m">
         <div class="x-mb-left">
           <div class="x-mb-element x-mb-left-first">X</div>
@@ -318,11 +299,11 @@
             <div class="num-card-num-img">
               <img src="./assets/images/mobile/3bluemobile.png" />
             </div>
-            <div class="num-card-heading">Place Your Bet and Win.</div>
+            <div class="num-card-heading">Enter the Competition and Win.</div>
           </div>
           <div class="num-card-row2">
             Analyse statistics, assess our scoring criteria and predict your
-            wins - once you're confident, place your bet.
+            wins - once you're confident, enter the competition.
           </div>
         </div>
         <a href="./how-to-play.html" class="learn-more-mobile"><button id="num-card-more-btn">learn more</button></a>
@@ -359,7 +340,7 @@
                 </div>
                 <p>
                   New to Formula-1 or Fantasy Sports? Try your hand at our
-                  easy to bet and easy to win: Race Engineer for F1
+                  easy to learn and easy to win: Race Engineer for F1
                   Fantasy with pre-made teams of 2 drivers each.
                 </p>
                 <h4>Quick and Easy</h4>
@@ -410,7 +391,7 @@
           <h4>Race Engineer</h4>
           <p>
             New to Formula-1 or Fantasy Sports? Try your hand at our easy to
-            bet and easy to win: Race Engineer for F1 Fantasy with
+            learn and easy to win: Race Engineer for F1 Fantasy with
             pre-made teams of 2 drivers each.
           </p>
           <h6>Quick and Easy</h6>
