added chanegs to the code

--- a/help-support.html
+++ b/help-support.html
@@ -277,7 +277,7 @@
                 </ol>
             </div>
             <div class="clause-wrapper">
-                <h1>03 <span class="dash"></span>Account Deeltion</h1>
+                <h1>03 <span class="dash"></span>Account Deltion</h1>
                 <ol class="sub-headings">
                     <li>
                         <h3>1. How can I delete my account?</h3>
@@ -297,7 +297,7 @@
                 </ol>
             </div>
             <div class="clause-wrapper" id="last">
-                <h1>03 <span class="dash"></span>Contact us</h1>
+                <h1>04 <span class="dash"></span>Contact us</h1>
                 <ol class="sub-headings">
                     <li>
                         <h3>Email</h3>
