added changes to the code

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <img class="download-options" src="./assets/images/XMLID_206_.png" alt="play-store"
                             loading="lazy" />
                         <div class="play-store">
-                            <p class="wait-text">*Coming Soon</p>
+                            <p class="wait-text">*Beta live now</p>
                             <a href="https://spaces.shortsqueeze.space/Application/app-release.apk"><img
                                     class="download-options2" src="./assets/images/google-play-badge.png"
                                     alt="play-store" loading="lazy" /></a>
@@ -110,7 +110,7 @@
                     </h2>
                     <div id="download-options-wrapper-m">
                         <div class="app-store-m">
-                            <p>*Coming Soon</p>
+                            <p>*Beta live now</p>
                             <img class="download-options-m" src="./assets/images/app-store.png" alt="app-store"
                                 loading="lazy" />
                         </div>
